--- a/Pong clone/Pong clone.vcxproj
+++ b/Pong clone/Pong clone.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Ball.cpp" />
     <ClCompile Include="src\Bot.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\PauseState.cpp" />
@@ -173,6 +174,7 @@
     <ClCompile Include="src\StateManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Ball.h" />
     <ClInclude Include="src\Bot.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\PauseState.h" />
