Added game over after 5 points. Game is finished.

--- a/Pong clone/Pong clone.vcxproj
+++ b/Pong clone/Pong clone.vcxproj
@@ -176,6 +176,7 @@
   <ItemGroup>
     <ClInclude Include="src\Ball.h" />
     <ClInclude Include="src\Bot.h" />
+    <ClInclude Include="src\Common.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\PauseState.h" />
     <ClInclude Include="src\PlayingState.h" />
