--- a/Pong clone/Pong clone.vcxproj.filters
+++ b/Pong clone/Pong clone.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="src\Ball.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
